--- a/node-project/public/index.html
+++ b/node-project/public/index.html
@@ -4,7 +4,7 @@
 <HEAD>
     <SCRIPT LANGUAGE="JavaScript">
         function mi_alerta() {
-            alert("Este seria el mensaje de alerta desde boton!");
+            alert("Hola Chino ya estoy avanzando de nivel mas y mas hace tiempo no podia hacer esto ahora te mando un abrazo desde aqui, te amo!");
         }
     </SCRIPT>
 </HEAD>
