--- a/node-project/public/index.html
+++ b/node-project/public/index.html
@@ -11,7 +11,7 @@
 
 <BODY>
     <FORM>
-        <input type=button value="Prueba la alerta" onClick="mi_alerta()">
+        <input type=button value="Apretame con ganas!" onClick="mi_alerta()">
     </FORM>
 </BODY>
 
