correccion de error

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Conección con Node.js</title>
-    <script src='main.js'></script>
-</head>
-<body>
-    <h2>Hola aqui va el contenido</h2>
-</body>
+
+<HEAD>
+    <SCRIPT LANGUAGE="JavaScript">
+        function mi_alerta() {
+            alert("Hola Chino ya estoy avanzando de nivel mas y mas hace tiempo no podia hacer esto ahora te mando un abrazo desde aqui, te amo!");
+        }
+    </SCRIPT>
+</HEAD>
+
+<BODY>
+    <FORM>
+        <input type=button value="Apretame con ganas!" onClick="mi_alerta()">
+    </FORM>
+</BODY>
+
 </html>
