cambio de texto

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <HEAD>
     <SCRIPT LANGUAGE="JavaScript">
         function mi_alerta() {
-            alert("mi niña espero te mejores pronto asi y acabe su sufrir, te amo!");
+            alert("Hola Chino ya estoy avanzando de nivel mas y mas hace tiempo no podia hacer esto ahora te mando un abrazo desde aqui, te amo!");
         }
     </SCRIPT>
 </HEAD>
