puesta de nombre

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Conección con Node.js</title>
-    <script src='main.js'></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heroku</title>
 </head>
 <body>
-    <h2>Hola aqui va el contenido</h2>
+    <h2>Abdón Joel Calderón Limones</h2>
 </body>
 </html>
